hphp/hack/test/typecheck/dynamic_props2.php.exp
File "dynamic_props2.php", line 12, characters 11-11:
A valid variable name starts with a letter or underscore,followed by any number of letters, numbers, or underscores (Parsing[1002])
